CHANGES
0.10.2 (September 14, 2022)
- fix bug that wiped authorlist if an updated dc object was saved to the DB

0.10.1 (September 12, 2022)
- fixed bug where metadata upload failed if pubinfo was missing the country. 

0.10.0 (July 12, 2022)
- breaking change! moved notifier to be a Logger global because loggers are global
- revised Logger to avoid duplicate logging. Now, every time Logger.setup() is called, at most 3 handlers are set, a StreamHandler, a base_logger, and a ebook-specific logger.

0.9.3 (June 17, 2022)
- remove duplicate log handlers when logging to console

0.9.0 (June 16, 2022)
- tested with Python 3.7 and 3.8; Python 3.6 no longer supported
- added a metadata handle for "created:" fields
- turns out we didn't really want to clear the log handlers

0.8.16 (February 4, 2022)
- add HTML5_DOCTYPE to GutenbergGlobals
- add epub prefix for NSMAP

0.8.15 (January 20, 2022)
- find gutenberg header in html even if html header is long
- catch exception when a non-existent language code is used
- fix exception with empty file
- remove double spaces from names
- add mime types for font files
- update lxml
- delint
- fix error in 0.8.14

0.8.13 (November 16, 2021)
- handle errors in store_file_in_database due to dns errors

0.8.12 (November 5, 2021)
- Attributes should not contain <CR> in HTML5. so we adjusted the code method makes dc meta tags to escape <CR>, <LF> and any combination thereof with the numeric entity &#11;

0.8.11 (September 28, 2021)
- fix issue of polymorphism in dc.languages. Without a db, it's a list of structs; with a db, its a related collection.
- ebookmaker will no longer ignore xml:lang or DC meta attributes
- fix windows path comparison - ebookmaker will behave properly when input file is in outputdir
- delint

0.8.10 (September 7, 2021)
- fixed bug where dc.project_gutenberg_id(ebook) was not handling null ebook
- added session management decorator to methods in GutenbergFiles 

0.8.9 (September 3, 2021)